package ejercicio7;

public class Barco {
    TipoBarco tipo;
    int numero;
    String nombre;

    public Barco(TipoBarco tipo, int numero, String nombre) {
        this.tipo = tipo;
        this.numero = numero;
        this.nombre = nombre;
    }
}
