package ejercicio7;

public enum TipoBarco {
    BATTLESHIP, FRIGATE, CANOE
}
